Adjusted the main background image path to try and fix the issue of the image not being displayed on FireFox broswer in index.css

--- a/index.css
+++ b/index.css
@@ -3,7 +3,8 @@ Styling Sheet for index.html
 */
 
 body {
-    background-image: url("Home_Page_Images/Nioh_Front_Page_Background_Adjusted.png");
+    background-image: url("https://liukang1080.github.io/Nioh_Website/Home_Page_Images/Nioh_Front_Page_Background_Adjusted.png");
+    /* background-image: url("Home_Page_Images/Nioh_Front_Page_Background_Adjusted.png"); */
     background-repeat: no-repeat;
     background-attachment: fixed;
     padding-top: 30em;
